# cpp-template-screen-capture-program

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: build.yml
